integrate scheduling and fix some alignment issues

--- a/src/components/NonPage/Nav.css
+++ b/src/components/NonPage/Nav.css
@@ -64,7 +64,7 @@
   display: none;
 }
 
-@media (max-width:625px) {
+@media (max-width: 768px) {
   .hamburger {
     display:block;
   }
