--- a/src/components/NonPage/Schedule.css
+++ b/src/components/NonPage/Schedule.css
@@ -119,3 +119,15 @@
   font-weight: 400;
   line-height: 90%;
 }
+
+@media (max-width: 690px) {
+  .period {
+    font-size: 6rem;
+  }
+}
+
+@media (max-width: 560px) {
+  .period {
+    font-size: 4rem;
+  }
+}
